retry on read, send, dedicated report account

--- a/ResignAccountHandlerConsole/ResignAccountHandlerConsole.csproj
+++ b/ResignAccountHandlerConsole/ResignAccountHandlerConsole.csproj
@@ -50,7 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ConfigTemplate\config.ini">
+    <None Include="ConfigTemplate\cred_config.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ConfigTemplate\test_config.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
