added set mailbox autoreply

--- a/ResignAccountHandlerConsole/ConfigTemplate/test_config.ini
+++ b/ResignAccountHandlerConsole/ConfigTemplate/test_config.ini
@@ -1,7 +1,7 @@
 [EmailAccount] ;reading account
 ;exp: sender244:Pass$
-Authentication = ""
-ResignFolderName = "Test"
+Authentication = "xxxx"
+ResignFolderName = "Resign"
 ProcessedFolderName = "DoneResign"
 MoveToProcessedFolder = "false"
 ;exp: display_name:mailbox_address, n...
@@ -9,10 +9,13 @@ MoveToProcessedFolder = "false"
 AcceptedResignSenders = "vo ya phuong khanh:vo.phuong-khanh@hdsaison.com.vn"
 [Report] ;sending report account
 SendReport = "true"
-Authentication = ""
+Authentication = "xxxxx"
 ;exp: luu.nhat-hong@hdsaison, duong.cong-huy@hdsaison.com.vn
-ReportReceiver = "luu.nhat-hong@hdsaison.com.vn"
-ReportCC = "helpdesk.handler@hdsaison.com.vn"
+ReportReceiver = "xxxx"
+ReportCC = "xxxx"
+[MailBoxAutoReply]
+SetMailBoxAutoReply = "true"
+AutoReplyString = "I have resigned from my position, please contact my peer/superior for further instruction. Thank you."
 
 
 [Retry]
