--- a/ResignAccountHandlerConsole/ResignAccountHandlerConsole.csproj
+++ b/ResignAccountHandlerConsole/ResignAccountHandlerConsole.csproj
@@ -74,11 +74,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="FodyWeavers.xml" />
-    <Content Include="gears.ico" />
+    <Content Include="SupDict\man_dict _template.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="SupDict\man_dict.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="FodyWeavers.xml" />
+    <Content Include="gears.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
